fixing z-index of nav menu

--- a/frontend/styles/mixins.scss
+++ b/frontend/styles/mixins.scss
@@ -191,7 +191,7 @@
     #menu{
       width: 40%;
       margin-right: 2%;
-      z-index: 999;
+      // z-index: 999;
       #linksMenu{
         font-size: 16px;
         margin: 0%;
